###
# Copyright (c) 2009, Paul Gideon Dann
#
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
###

cmake_minimum_required(VERSION 2.8.6)
project(Torque2D)
set(PROJECT_LONGNAME "Torque2D")
set(PROJECT_VERSION "1.0")

# If no build type is specified, default to "Release"
if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release CACHE STRING
      "None Debug Release RelWithDebInfo MinSizeRel"
      FORCE)
endif (NOT CMAKE_BUILD_TYPE)

add_definitions( -Di386 )
add_definitions( -Dlinux )
#add_definitions( -DTORQUE_LITTLE_ENDIAN )

message(${CMAKE_CURRENT_SOURCE_DIR})

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/assets
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/gui
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/sceneobject
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/scene
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/algorithm
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/assets
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/audio
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/Shapes
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Common
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Rope
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/collection
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/component/behaviors
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/debug
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/debug/remote
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/delegates
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/game
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/input
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/resource
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/memory
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/messaging
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/module
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/taml
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/tinyXML
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/audio
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/component
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/component/behaviors
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/game
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/menus
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/nativeDialogs
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/threads
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/nativeDialogs
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/string
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/buttons
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/testing
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/

    ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/openal/X86UNIX/
)


#file(GLOB_RECURSE CODE_FILES *.cpp)

set(torque2d_SRCS 
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/assets/AnimationAsset.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/assets/AnimationController.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/assets/ImageAsset.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/assets/ParticleAsset.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/assets/ParticleAssetEmitter.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/assets/ParticleAssetField.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/assets/ParticleAssetFieldCollection.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/BatchRender.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/CoreMath.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/ParticleSystem.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/RenderProxy.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/SpriteBase.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/SpriteBatch.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/SpriteBatchItem.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/SpriteProxyBase.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/Utility.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/core/Vector2.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/gui/guiImageButtonCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/gui/guiSceneObjectCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/gui/guiSpriteCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/gui/SceneWindow.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/sceneobject/CompositeSprite.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/sceneobject/ImageFont.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/sceneobject/ParticlePlayer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/sceneobject/SceneObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/sceneobject/Scroller.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/sceneobject/ShapeVector.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/sceneobject/Sprite.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/sceneobject/Trigger.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/scene/ContactFilter.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/scene/DebugDraw.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/scene/Scene.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/scene/SceneRenderFactories.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/scene/SceneRenderQueue.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/2d/scene/WorldQuery.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/algorithm/crc.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/algorithm/hashFunction.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/assets/assetBase.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/assets/assetFieldTypes.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/assets/assetManager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/assets/assetQuery.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/assets/assetSnapshot.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/assets/assetTagsManifest.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/assets/declaredAssets.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/assets/referencedAssets.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/audio/audioAsset.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/b2BroadPhase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/b2CollideCircle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/b2CollideEdge.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/b2CollidePolygon.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/b2Collision.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/b2Distance.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/b2DynamicTree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/b2TimeOfImpact.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/Shapes/b2ChainShape.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/Shapes/b2CircleShape.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/Shapes/b2EdgeShape.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Collision/Shapes/b2PolygonShape.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Common/b2BlockAllocator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Common/b2Draw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Common/b2Math.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Common/b2Settings.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Common/b2StackAllocator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Common/b2Timer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/b2Body.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/b2ContactManager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/b2Fixture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/b2Island.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/b2World.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/b2WorldCallbacks.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts/b2ChainAndCircleContact.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts/b2ChainAndPolygonContact.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts/b2CircleContact.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts/b2Contact.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts/b2ContactSolver.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts/b2EdgeAndCircleContact.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts/b2PolygonAndCircleContact.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Contacts/b2PolygonContact.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2DistanceJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2FrictionJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2GearJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2Joint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2MotorJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2MouseJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2PrismaticJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2PulleyJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2RevoluteJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2RopeJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2WeldJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Dynamics/Joints/b2WheelJoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/box2d/Rope/b2Rope.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/collection/bitTables.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/collection/hashTable.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/collection/nameTags.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/collection/undo.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/collection/vector.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleBaseType.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleDictionary.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleExprEvalState.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleNamespace.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/ConsoleTypeValidators.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/debug/profiler.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/debug/remote/RemoteDebugger1.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/debug/remote/RemoteDebuggerBase.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/debug/remote/RemoteDebuggerBridge.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/debug/telnetDebugger.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/delegates/delegateSignal.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/game/defaultGame.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/game/gameInterface.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/bitmapBmp.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/bitmapJpeg.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/bitmapPng.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/color.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/dgl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/dglMatrix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/DynamicTexture.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/gBitmap.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/gFont.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/gPalette.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/PNGImage.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/splineUtil.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/TextureDictionary.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/TextureHandle.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/graphics/TextureManager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiArrayCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiBackgroundCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiBitmapBorderCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiBitmapCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiBubbleTextCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiCanvas.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiColorPicker.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiConsole.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiConsoleEditCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiConsoleTextCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiControl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiDefaultControlRender.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiFadeinBitmapCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiInputCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiListBoxCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiMessageVectorCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiMLTextCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiMLTextEditCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiMouseEventCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiPopUpCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiPopUpCtrlEx.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiProgressCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiScriptNotifyControl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiSliderCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiTabPageCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiTextCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiTextEditCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiTextEditSliderCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiTextListCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiTickCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiTreeViewCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/guiTypes.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/language/lang.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/messageVector.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/input/actionMap.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/bitStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/bufferStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/fileObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/fileStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/fileStreamObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/fileSystemFunctions.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/filterStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/memStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/nStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/resizeStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/resource/resourceDictionary.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/resource/resourceManager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/streamObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/centralDir.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/compressor.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/deflate.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/extraField.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/fileHeader.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/stored.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/zipArchive.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/zipCryptStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/zipObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/zipSubStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/io/zip/zipTempStream.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/rectClipper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/memory/dataChunker.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/memory/frameAllocator.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/messaging/dispatcher.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/messaging/eventManager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/messaging/message.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/messaging/messageForwarder.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/messaging/scriptMsgListener.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/module/moduleDefinition.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/module/moduleManager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/module/moduleMergeDefinition.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/connectionProtocol.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/connectionStringTable.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/httpObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/netConnection.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/netDownload.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/netEvent.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/netGhost.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/netInterface.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/netObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/netStringTable.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/netTest.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/networkProcessList.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/RemoteCommandEvent.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/serverQuery.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/tcpObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/network/telnetConsole.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/taml/taml.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/taml/tamlBinaryReader.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/taml/tamlBinaryWriter.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/taml/tamlCustom.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/taml/tamlWriteNode.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/taml/tamlXmlParser.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/taml/tamlXmlReader.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/taml/tamlXmlWriter.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/tinyXML/tinystr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/tinyXML/tinyxml.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/tinyXML/tinyxmlerror.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/tinyXML/tinyxmlparser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/audio/audio.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/audio/audioBuffer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/audio/audioDataBlock.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/audio/audioFunctions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/audio/audioStreamSourceFactory.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/audio/wavStreamSource.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/component/dynamicConsoleMethodComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/component/simComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/component/behaviors/behaviorComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/component/behaviors/behaviorInstance.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/component/behaviors/behaviorTemplate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/astAlloc.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/astNodes.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/cmdgram.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/CMDscan.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/codeBlock.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/compiledEval.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/compiler.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/console.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleDoc.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleFunctions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleLogger.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleParser.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/console/consoleTypes.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/game/gameConnection.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/game/version.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mathTypes.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mathUtils.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mBox.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mConsoleFunctions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mMath_C.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mMathAltivec.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mMathAMD.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mMathFn.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mMathSSE.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mMatrix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mPlaneTransformer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mQuadPatch.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mQuat.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mRandom.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mSolver.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/math/mSplinePatch.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/persistence/SimXMLDocument.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/nativeDialogs/win32FileDialog.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/CursorManager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/nativeDialogs/fileDialog.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/platform.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/platformAssert.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/platformCPU.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/platformFileIO.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/platformFont.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/platformMemory.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/platformNetwork.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/platformString.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/platformVideo.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/menus/popupMenu.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/nativeDialogs/msgBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/cardProfile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winAsmBlit.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winConsole.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winCPUInfo.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winDInputDevice.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winDirectInput.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winExec.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winFileio.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winFont.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winGL.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winGLSpecial.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winInput.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winMath.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winMath_ASM.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winMemory.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winNet.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winOGLVideo.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winOpenAL.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winProcessControl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winSemaphore.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winStrings.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winTime.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winTLS.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winUser.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winVFS.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winVideo.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/winWindow.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/menus/popupMenuWin32.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/nativeDialogs/win32DirectoryResolver.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/nativeDialogs/win32MsgBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/threads/mutex.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platformWin32/threads/thread.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/platform/Tickable.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/scriptGroup.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/scriptObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simBase.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simConsoleEvent.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simConsoleThreadExecEvent.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simDatablock.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simDictionary.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simFieldDictionary.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simManager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simObject.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simObjectList.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simSerialize.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/sim/simSet.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/string/findMatch.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/string/stringBuffer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/string/stringStack.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/string/stringTable.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/string/stringUnit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/string/unicode.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/buttons/guiBitmapButtonCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/buttons/guiBorderButton.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/buttons/guiButtonBaseCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/buttons/guiButtonCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/buttons/guiCheckBoxCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/buttons/guiIconButtonCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/buttons/guiRadioCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/buttons/guiToolboxButtonCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiAutoScrollCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiCtrlArrayCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiDragAndDropCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiDynamicCtrlArrayCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiFormCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiFrameCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiPaneCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiRolloutCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiScrollCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiStackCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiTabBookCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/containers/guiWindowCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiControlListPopup.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiDebugger.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiEditCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiFilterCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiGraphCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiImageList.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiInspector.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiInspectorTypes.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiMenuBar.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/gui/editor/guiSeparatorCtrl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/testing/tests/platformFileIoTests.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/testing/tests/platformMemoryTests.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/testing/tests/platformStringTests.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../source/testing/unitTesting.cc
)


add_executable(${CMAKE_PROJECT_NAME}
  ${torque2d_SRCS}
  ${CODE_FILES}
  ${RESOURCE_FILES}
)
#target_link_libraries(${CMAKE_PROJECT_NAME}
#  ${QT_LIBRARIES}
#)
